y.output
Terminaux inutilisés dans la grammaire

   YDO
   YTRUE
   YFALSE
   YPRINTMAT
   YEOF
   UMINUS


Grammaire

    0 $accept: S $end

    1 S: program

    2 program: %empty
    3        | fn_declaration

    4 fn_declaration: type YID '(' params ')' '{' stmt_list '}'
    5               | YINT YMAIN '(' ')' '{' stmt_list '}'

    6 type: YINT
    7     | YFLOAT

    8 params: %empty
    9       | param_list

   10 param_list: param_list ',' param
   11           | param

   12 param: type YID

   13 return_stmt: YRETURN
   14            | YRETURN expr

   15 stmt: ';'
   16     | expression ';'
   17     | var '=' expr ';'
   18     | if_stmt
   19     | while_stmt
   20     | for_stmt
   21     | '{' stmt_list '}'
   22     | return_stmt ';'

   23 stmt_list: stmt
   24          | stmt stmt_list

   25 expression: aff_expr
   26           | YPRINT '(' expr ')'
   27           | YPRINTF '(' YSTRING ')'
   28           | expr

   29 expr: YID
   30     | const
   31     | expr '-' expr
   32     | expr '+' expr
   33     | expr '*' expr
   34     | expr '/' expr
   35     | expr incr

   36 incr: YPP
   37     | YMM

   38 const: YNUM
   39      | YREEL

   40 var: YID

   41 while_stmt: YWHILE tag '(' condition ')' tag stmt

   42 for_stmt: YFOR '(' aff_expr ';' tag condition ';' tag expr tagGoto ')' tag stmt

   43 if_stmt: YIF '(' condition ')' tag stmt
   44        | YIF '(' condition ')' tag stmt YELSE tagGoto tag stmt

   45 aff_expr: type YID YASSIGN expr
   46         | var YASSIGN expr

   47 condition: expr rel expr
   48          | expr
   49          | condition YOR tag condition
   50          | condition YAND tag condition
   51          | YNOT condition
   52          | '(' condition ')'

   53 tag: %empty

   54 tagGoto: %empty

   55 rel: YEQUAL
   56    | YNEQ
   57    | YLEQ
   58    | YGEQ
   59    | '<'
   60    | '>'


Terminaux, suivis des règles où ils apparaissent

$end (0) 0
'(' (40) 4 5 26 27 41 42 43 44 52
')' (41) 4 5 26 27 41 42 43 44 52
'*' (42) 33
'+' (43) 32
',' (44) 10
'-' (45) 31
'/' (47) 34
';' (59) 15 16 17 22 42
'<' (60) 59
'=' (61) 17
'>' (62) 60
'{' (123) 4 5 21
'}' (125) 4 5 21
error (256)
YASSIGN (258) 45 46
YWHILE (259) 41
YFOR (260) 42
YDO (261)
YIF (262) 43 44
YELSE (263) 44
YEQUAL (264) 55
YNEQ (265) 56
YTRUE (266)
YFALSE (267)
YOR (268) 49
YINT (269) 5 6
YFLOAT (270) 7
YPRINT (271) 26
YPRINTF (272) 27
YPRINTMAT (273)
YLEQ (274) 57
YGEQ (275) 58
YMAIN (276) 5
YRETURN (277) 13 14
YEOF (278)
YPP (279) 36
YMM (280) 37
YNUM (281) 38
YREEL (282) 39
YID (283) 4 12 29 40 45
YSTRING (284) 27
NO_ELSE (285)
YAND (286) 50
UMINUS (287)
YNOT (288) 51


Non-terminaux, suivis des règles où ils apparaissent

$accept (47)
    à gauche: 0
S (48)
    à gauche: 1, à droite: 0
program (49)
    à gauche: 2 3, à droite: 1
fn_declaration (50)
    à gauche: 4 5, à droite: 3
type (51)
    à gauche: 6 7, à droite: 4 12 45
params (52)
    à gauche: 8 9, à droite: 4
param_list (53)
    à gauche: 10 11, à droite: 9 10
param (54)
    à gauche: 12, à droite: 10 11
return_stmt (55)
    à gauche: 13 14, à droite: 22
stmt (56)
    à gauche: 15 16 17 18 19 20 21 22, à droite: 23 24 41 42 43 44
stmt_list (57)
    à gauche: 23 24, à droite: 4 5 21 24
expression (58)
    à gauche: 25 26 27 28, à droite: 16
expr (59)
    à gauche: 29 30 31 32 33 34 35, à droite: 14 17 26 28 31 32 33
    34 35 42 45 46 47 48
incr (60)
    à gauche: 36 37, à droite: 35
const (61)
    à gauche: 38 39, à droite: 30
var (62)
    à gauche: 40, à droite: 17 46
while_stmt (63)
    à gauche: 41, à droite: 19
for_stmt (64)
    à gauche: 42, à droite: 20
if_stmt (65)
    à gauche: 43 44, à droite: 18
aff_expr (66)
    à gauche: 45 46, à droite: 25 42
condition (67)
    à gauche: 47 48 49 50 51 52, à droite: 41 42 43 44 49 50 51 52
tag (68)
    à gauche: 53, à droite: 41 42 43 44 49 50
tagGoto (69)
    à gauche: 54, à droite: 42 44
rel (70)
    à gauche: 55 56 57 58 59 60, à droite: 47


État 0

    0 $accept: . S $end

    YINT    décalage et aller à l'état 1
    YFLOAT  décalage et aller à l'état 2

    $défaut  réduction par utilisation de la règle 2 (program)

    S               aller à l'état 3
    program         aller à l'état 4
    fn_declaration  aller à l'état 5
    type            aller à l'état 6


État 1

    5 fn_declaration: YINT . YMAIN '(' ')' '{' stmt_list '}'
    6 type: YINT .

    YMAIN  décalage et aller à l'état 7

    $défaut  réduction par utilisation de la règle 6 (type)


État 2

    7 type: YFLOAT .

    $défaut  réduction par utilisation de la règle 7 (type)


État 3

    0 $accept: S . $end

    $end  décalage et aller à l'état 8


État 4

    1 S: program .

    $défaut  réduction par utilisation de la règle 1 (S)


État 5

    3 program: fn_declaration .

    $défaut  réduction par utilisation de la règle 3 (program)


État 6

    4 fn_declaration: type . YID '(' params ')' '{' stmt_list '}'

    YID  décalage et aller à l'état 9


État 7

    5 fn_declaration: YINT YMAIN . '(' ')' '{' stmt_list '}'

    '('  décalage et aller à l'état 10


État 8

    0 $accept: S $end .

    $défaut  accepter


État 9

    4 fn_declaration: type YID . '(' params ')' '{' stmt_list '}'

    '('  décalage et aller à l'état 11


État 10

    5 fn_declaration: YINT YMAIN '(' . ')' '{' stmt_list '}'

    ')'  décalage et aller à l'état 12


État 11

    4 fn_declaration: type YID '(' . params ')' '{' stmt_list '}'

    YINT    décalage et aller à l'état 13
    YFLOAT  décalage et aller à l'état 2

    $défaut  réduction par utilisation de la règle 8 (params)

    type        aller à l'état 14
    params      aller à l'état 15
    param_list  aller à l'état 16
    param       aller à l'état 17


État 12

    5 fn_declaration: YINT YMAIN '(' ')' . '{' stmt_list '}'

    '{'  décalage et aller à l'état 18


État 13

    6 type: YINT .

    $défaut  réduction par utilisation de la règle 6 (type)


État 14

   12 param: type . YID

    YID  décalage et aller à l'état 19


État 15

    4 fn_declaration: type YID '(' params . ')' '{' stmt_list '}'

    ')'  décalage et aller à l'état 20


État 16

    9 params: param_list .
   10 param_list: param_list . ',' param

    ','  décalage et aller à l'état 21

    $défaut  réduction par utilisation de la règle 9 (params)


État 17

   11 param_list: param .

    $défaut  réduction par utilisation de la règle 11 (param_list)


État 18

    5 fn_declaration: YINT YMAIN '(' ')' '{' . stmt_list '}'

    YWHILE   décalage et aller à l'état 22
    YFOR     décalage et aller à l'état 23
    YIF      décalage et aller à l'état 24
    YINT     décalage et aller à l'état 13
    YFLOAT   décalage et aller à l'état 2
    YPRINT   décalage et aller à l'état 25
    YPRINTF  décalage et aller à l'état 26
    YRETURN  décalage et aller à l'état 27
    YNUM     décalage et aller à l'état 28
    YREEL    décalage et aller à l'état 29
    YID      décalage et aller à l'état 30
    '{'      décalage et aller à l'état 31
    ';'      décalage et aller à l'état 32

    type         aller à l'état 33
    return_stmt  aller à l'état 34
    stmt         aller à l'état 35
    stmt_list    aller à l'état 36
    expression   aller à l'état 37
    expr         aller à l'état 38
    const        aller à l'état 39
    var          aller à l'état 40
    while_stmt   aller à l'état 41
    for_stmt     aller à l'état 42
    if_stmt      aller à l'état 43
    aff_expr     aller à l'état 44


État 19

   12 param: type YID .

    $défaut  réduction par utilisation de la règle 12 (param)


État 20

    4 fn_declaration: type YID '(' params ')' . '{' stmt_list '}'

    '{'  décalage et aller à l'état 45


État 21

   10 param_list: param_list ',' . param

    YINT    décalage et aller à l'état 13
    YFLOAT  décalage et aller à l'état 2

    type   aller à l'état 14
    param  aller à l'état 46


État 22

   41 while_stmt: YWHILE . tag '(' condition ')' tag stmt

    $défaut  réduction par utilisation de la règle 53 (tag)

    tag  aller à l'état 47


État 23

   42 for_stmt: YFOR . '(' aff_expr ';' tag condition ';' tag expr tagGoto ')' tag stmt

    '('  décalage et aller à l'état 48


État 24

   43 if_stmt: YIF . '(' condition ')' tag stmt
   44        | YIF . '(' condition ')' tag stmt YELSE tagGoto tag stmt

    '('  décalage et aller à l'état 49


État 25

   26 expression: YPRINT . '(' expr ')'

    '('  décalage et aller à l'état 50


État 26

   27 expression: YPRINTF . '(' YSTRING ')'

    '('  décalage et aller à l'état 51


État 27

   13 return_stmt: YRETURN .
   14            | YRETURN . expr

    YNUM   décalage et aller à l'état 28
    YREEL  décalage et aller à l'état 29
    YID    décalage et aller à l'état 52

    $défaut  réduction par utilisation de la règle 13 (return_stmt)

    expr   aller à l'état 53
    const  aller à l'état 39


État 28

   38 const: YNUM .

    $défaut  réduction par utilisation de la règle 38 (const)


État 29

   39 const: YREEL .

    $défaut  réduction par utilisation de la règle 39 (const)


État 30

   29 expr: YID .
   40 var: YID .

    YASSIGN   réduction par utilisation de la règle 40 (var)
    '='       réduction par utilisation de la règle 40 (var)
    $défaut  réduction par utilisation de la règle 29 (expr)


État 31

   21 stmt: '{' . stmt_list '}'

    YWHILE   décalage et aller à l'état 22
    YFOR     décalage et aller à l'état 23
    YIF      décalage et aller à l'état 24
    YINT     décalage et aller à l'état 13
    YFLOAT   décalage et aller à l'état 2
    YPRINT   décalage et aller à l'état 25
    YPRINTF  décalage et aller à l'état 26
    YRETURN  décalage et aller à l'état 27
    YNUM     décalage et aller à l'état 28
    YREEL    décalage et aller à l'état 29
    YID      décalage et aller à l'état 30
    '{'      décalage et aller à l'état 31
    ';'      décalage et aller à l'état 32

    type         aller à l'état 33
    return_stmt  aller à l'état 34
    stmt         aller à l'état 35
    stmt_list    aller à l'état 54
    expression   aller à l'état 37
    expr         aller à l'état 38
    const        aller à l'état 39
    var          aller à l'état 40
    while_stmt   aller à l'état 41
    for_stmt     aller à l'état 42
    if_stmt      aller à l'état 43
    aff_expr     aller à l'état 44


État 32

   15 stmt: ';' .

    $défaut  réduction par utilisation de la règle 15 (stmt)


État 33

   45 aff_expr: type . YID YASSIGN expr

    YID  décalage et aller à l'état 55


État 34

   22 stmt: return_stmt . ';'

    ';'  décalage et aller à l'état 56


État 35

   23 stmt_list: stmt .
   24          | stmt . stmt_list

    YWHILE   décalage et aller à l'état 22
    YFOR     décalage et aller à l'état 23
    YIF      décalage et aller à l'état 24
    YINT     décalage et aller à l'état 13
    YFLOAT   décalage et aller à l'état 2
    YPRINT   décalage et aller à l'état 25
    YPRINTF  décalage et aller à l'état 26
    YRETURN  décalage et aller à l'état 27
    YNUM     décalage et aller à l'état 28
    YREEL    décalage et aller à l'état 29
    YID      décalage et aller à l'état 30
    '{'      décalage et aller à l'état 31
    ';'      décalage et aller à l'état 32

    $défaut  réduction par utilisation de la règle 23 (stmt_list)

    type         aller à l'état 33
    return_stmt  aller à l'état 34
    stmt         aller à l'état 35
    stmt_list    aller à l'état 57
    expression   aller à l'état 37
    expr         aller à l'état 38
    const        aller à l'état 39
    var          aller à l'état 40
    while_stmt   aller à l'état 41
    for_stmt     aller à l'état 42
    if_stmt      aller à l'état 43
    aff_expr     aller à l'état 44


État 36

    5 fn_declaration: YINT YMAIN '(' ')' '{' stmt_list . '}'

    '}'  décalage et aller à l'état 58


État 37

   16 stmt: expression . ';'

    ';'  décalage et aller à l'état 59


État 38

   28 expression: expr .
   31 expr: expr . '-' expr
   32     | expr . '+' expr
   33     | expr . '*' expr
   34     | expr . '/' expr
   35     | expr . incr

    YPP  décalage et aller à l'état 60
    YMM  décalage et aller à l'état 61
    '+'  décalage et aller à l'état 62
    '-'  décalage et aller à l'état 63
    '*'  décalage et aller à l'état 64
    '/'  décalage et aller à l'état 65

    $défaut  réduction par utilisation de la règle 28 (expression)

    incr  aller à l'état 66


État 39

   30 expr: const .

    $défaut  réduction par utilisation de la règle 30 (expr)


État 40

   17 stmt: var . '=' expr ';'
   46 aff_expr: var . YASSIGN expr

    YASSIGN  décalage et aller à l'état 67
    '='      décalage et aller à l'état 68


État 41

   19 stmt: while_stmt .

    $défaut  réduction par utilisation de la règle 19 (stmt)


État 42

   20 stmt: for_stmt .

    $défaut  réduction par utilisation de la règle 20 (stmt)


État 43

   18 stmt: if_stmt .

    $défaut  réduction par utilisation de la règle 18 (stmt)


État 44

   25 expression: aff_expr .

    $défaut  réduction par utilisation de la règle 25 (expression)


État 45

    4 fn_declaration: type YID '(' params ')' '{' . stmt_list '}'

    YWHILE   décalage et aller à l'état 22
    YFOR     décalage et aller à l'état 23
    YIF      décalage et aller à l'état 24
    YINT     décalage et aller à l'état 13
    YFLOAT   décalage et aller à l'état 2
    YPRINT   décalage et aller à l'état 25
    YPRINTF  décalage et aller à l'état 26
    YRETURN  décalage et aller à l'état 27
    YNUM     décalage et aller à l'état 28
    YREEL    décalage et aller à l'état 29
    YID      décalage et aller à l'état 30
    '{'      décalage et aller à l'état 31
    ';'      décalage et aller à l'état 32

    type         aller à l'état 33
    return_stmt  aller à l'état 34
    stmt         aller à l'état 35
    stmt_list    aller à l'état 69
    expression   aller à l'état 37
    expr         aller à l'état 38
    const        aller à l'état 39
    var          aller à l'état 40
    while_stmt   aller à l'état 41
    for_stmt     aller à l'état 42
    if_stmt      aller à l'état 43
    aff_expr     aller à l'état 44


État 46

   10 param_list: param_list ',' param .

    $défaut  réduction par utilisation de la règle 10 (param_list)


État 47

   41 while_stmt: YWHILE tag . '(' condition ')' tag stmt

    '('  décalage et aller à l'état 70


État 48

   42 for_stmt: YFOR '(' . aff_expr ';' tag condition ';' tag expr tagGoto ')' tag stmt

    YINT    décalage et aller à l'état 13
    YFLOAT  décalage et aller à l'état 2
    YID     décalage et aller à l'état 71

    type      aller à l'état 33
    var       aller à l'état 72
    aff_expr  aller à l'état 73


État 49

   43 if_stmt: YIF '(' . condition ')' tag stmt
   44        | YIF '(' . condition ')' tag stmt YELSE tagGoto tag stmt

    YNUM   décalage et aller à l'état 28
    YREEL  décalage et aller à l'état 29
    YID    décalage et aller à l'état 52
    YNOT   décalage et aller à l'état 74
    '('    décalage et aller à l'état 75

    expr       aller à l'état 76
    const      aller à l'état 39
    condition  aller à l'état 77


État 50

   26 expression: YPRINT '(' . expr ')'

    YNUM   décalage et aller à l'état 28
    YREEL  décalage et aller à l'état 29
    YID    décalage et aller à l'état 52

    expr   aller à l'état 78
    const  aller à l'état 39


État 51

   27 expression: YPRINTF '(' . YSTRING ')'

    YSTRING  décalage et aller à l'état 79


État 52

   29 expr: YID .

    $défaut  réduction par utilisation de la règle 29 (expr)


État 53

   14 return_stmt: YRETURN expr .
   31 expr: expr . '-' expr
   32     | expr . '+' expr
   33     | expr . '*' expr
   34     | expr . '/' expr
   35     | expr . incr

    YPP  décalage et aller à l'état 60
    YMM  décalage et aller à l'état 61
    '+'  décalage et aller à l'état 62
    '-'  décalage et aller à l'état 63
    '*'  décalage et aller à l'état 64
    '/'  décalage et aller à l'état 65

    $défaut  réduction par utilisation de la règle 14 (return_stmt)

    incr  aller à l'état 66


État 54

   21 stmt: '{' stmt_list . '}'

    '}'  décalage et aller à l'état 80


État 55

   45 aff_expr: type YID . YASSIGN expr

    YASSIGN  décalage et aller à l'état 81


État 56

   22 stmt: return_stmt ';' .

    $défaut  réduction par utilisation de la règle 22 (stmt)


État 57

   24 stmt_list: stmt stmt_list .

    $défaut  réduction par utilisation de la règle 24 (stmt_list)


État 58

    5 fn_declaration: YINT YMAIN '(' ')' '{' stmt_list '}' .

    $défaut  réduction par utilisation de la règle 5 (fn_declaration)


État 59

   16 stmt: expression ';' .

    $défaut  réduction par utilisation de la règle 16 (stmt)


État 60

   36 incr: YPP .

    $défaut  réduction par utilisation de la règle 36 (incr)


État 61

   37 incr: YMM .

    $défaut  réduction par utilisation de la règle 37 (incr)


État 62

   32 expr: expr '+' . expr

    YNUM   décalage et aller à l'état 28
    YREEL  décalage et aller à l'état 29
    YID    décalage et aller à l'état 52

    expr   aller à l'état 82
    const  aller à l'état 39


État 63

   31 expr: expr '-' . expr

    YNUM   décalage et aller à l'état 28
    YREEL  décalage et aller à l'état 29
    YID    décalage et aller à l'état 52

    expr   aller à l'état 83
    const  aller à l'état 39


État 64

   33 expr: expr '*' . expr

    YNUM   décalage et aller à l'état 28
    YREEL  décalage et aller à l'état 29
    YID    décalage et aller à l'état 52

    expr   aller à l'état 84
    const  aller à l'état 39


État 65

   34 expr: expr '/' . expr

    YNUM   décalage et aller à l'état 28
    YREEL  décalage et aller à l'état 29
    YID    décalage et aller à l'état 52

    expr   aller à l'état 85
    const  aller à l'état 39


État 66

   35 expr: expr incr .

    $défaut  réduction par utilisation de la règle 35 (expr)


État 67

   46 aff_expr: var YASSIGN . expr

    YNUM   décalage et aller à l'état 28
    YREEL  décalage et aller à l'état 29
    YID    décalage et aller à l'état 52

    expr   aller à l'état 86
    const  aller à l'état 39


État 68

   17 stmt: var '=' . expr ';'

    YNUM   décalage et aller à l'état 28
    YREEL  décalage et aller à l'état 29
    YID    décalage et aller à l'état 52

    expr   aller à l'état 87
    const  aller à l'état 39


État 69

    4 fn_declaration: type YID '(' params ')' '{' stmt_list . '}'

    '}'  décalage et aller à l'état 88


État 70

   41 while_stmt: YWHILE tag '(' . condition ')' tag stmt

    YNUM   décalage et aller à l'état 28
    YREEL  décalage et aller à l'état 29
    YID    décalage et aller à l'état 52
    YNOT   décalage et aller à l'état 74
    '('    décalage et aller à l'état 75

    expr       aller à l'état 76
    const      aller à l'état 39
    condition  aller à l'état 89


État 71

   40 var: YID .

    $défaut  réduction par utilisation de la règle 40 (var)


État 72

   46 aff_expr: var . YASSIGN expr

    YASSIGN  décalage et aller à l'état 67


État 73

   42 for_stmt: YFOR '(' aff_expr . ';' tag condition ';' tag expr tagGoto ')' tag stmt

    ';'  décalage et aller à l'état 90


État 74

   51 condition: YNOT . condition

    YNUM   décalage et aller à l'état 28
    YREEL  décalage et aller à l'état 29
    YID    décalage et aller à l'état 52
    YNOT   décalage et aller à l'état 74
    '('    décalage et aller à l'état 75

    expr       aller à l'état 76
    const      aller à l'état 39
    condition  aller à l'état 91


État 75

   52 condition: '(' . condition ')'

    YNUM   décalage et aller à l'état 28
    YREEL  décalage et aller à l'état 29
    YID    décalage et aller à l'état 52
    YNOT   décalage et aller à l'état 74
    '('    décalage et aller à l'état 75

    expr       aller à l'état 76
    const      aller à l'état 39
    condition  aller à l'état 92


État 76

   31 expr: expr . '-' expr
   32     | expr . '+' expr
   33     | expr . '*' expr
   34     | expr . '/' expr
   35     | expr . incr
   47 condition: expr . rel expr
   48          | expr .

    YEQUAL  décalage et aller à l'état 93
    YNEQ    décalage et aller à l'état 94
    YLEQ    décalage et aller à l'état 95
    YGEQ    décalage et aller à l'état 96
    YPP     décalage et aller à l'état 60
    YMM     décalage et aller à l'état 61
    '<'     décalage et aller à l'état 97
    '>'     décalage et aller à l'état 98
    '+'     décalage et aller à l'état 62
    '-'     décalage et aller à l'état 63
    '*'     décalage et aller à l'état 64
    '/'     décalage et aller à l'état 65

    $défaut  réduction par utilisation de la règle 48 (condition)

    incr  aller à l'état 66
    rel   aller à l'état 99


État 77

   43 if_stmt: YIF '(' condition . ')' tag stmt
   44        | YIF '(' condition . ')' tag stmt YELSE tagGoto tag stmt
   49 condition: condition . YOR tag condition
   50          | condition . YAND tag condition

    YOR   décalage et aller à l'état 100
    YAND  décalage et aller à l'état 101
    ')'   décalage et aller à l'état 102


État 78

   26 expression: YPRINT '(' expr . ')'
   31 expr: expr . '-' expr
   32     | expr . '+' expr
   33     | expr . '*' expr
   34     | expr . '/' expr
   35     | expr . incr

    YPP  décalage et aller à l'état 60
    YMM  décalage et aller à l'état 61
    '+'  décalage et aller à l'état 62
    '-'  décalage et aller à l'état 63
    '*'  décalage et aller à l'état 64
    '/'  décalage et aller à l'état 65
    ')'  décalage et aller à l'état 103

    incr  aller à l'état 66


État 79

   27 expression: YPRINTF '(' YSTRING . ')'

    ')'  décalage et aller à l'état 104


État 80

   21 stmt: '{' stmt_list '}' .

    $défaut  réduction par utilisation de la règle 21 (stmt)


État 81

   45 aff_expr: type YID YASSIGN . expr

    YNUM   décalage et aller à l'état 28
    YREEL  décalage et aller à l'état 29
    YID    décalage et aller à l'état 52

    expr   aller à l'état 105
    const  aller à l'état 39


État 82

   31 expr: expr . '-' expr
   32     | expr . '+' expr
   32     | expr '+' expr .
   33     | expr . '*' expr
   34     | expr . '/' expr
   35     | expr . incr

    YPP  décalage et aller à l'état 60
    YMM  décalage et aller à l'état 61
    '*'  décalage et aller à l'état 64
    '/'  décalage et aller à l'état 65

    $défaut  réduction par utilisation de la règle 32 (expr)

    incr  aller à l'état 66


État 83

   31 expr: expr . '-' expr
   31     | expr '-' expr .
   32     | expr . '+' expr
   33     | expr . '*' expr
   34     | expr . '/' expr
   35     | expr . incr

    YPP  décalage et aller à l'état 60
    YMM  décalage et aller à l'état 61
    '*'  décalage et aller à l'état 64
    '/'  décalage et aller à l'état 65

    $défaut  réduction par utilisation de la règle 31 (expr)

    incr  aller à l'état 66


État 84
